Code cleaning based on FindBugs
(cherry picked from commit b5fd4f3e54b14e60e46bcd73e7c4ef2724140ce5)